--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,20 +2,25 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/sreevarshine/calendar.git",
   "dependencies": {
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "gh-pages": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
