--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
-  },
+  "start": "node server.js",
+  "build": "cd ../frontend && npm install && npm run build"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
