--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "main": "server.js",
+"scripts": {
+  "start": "node server.js",
+  "build": "cd ../frontend && npm install && npm run build"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
