--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://calendar-3-6ihi.onrender.com/
+VITE_API_BASE_URL=https://vercel.com/sreevarshines-projects/calendar/G3sasFAXYU3Qbdpwuvq7cdE4VkwG
