--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/sreevarshine/calendar.git",
+  "homepage": ".",
   "dependencies": {
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
