--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "version": "0.0.0",
+  "type": "module",
   "dependencies": {
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
