fix(auth): correct JWT_SECRET usage and improve middleware error handling
- Fixed JWT_SECRET reference in auth routes
- Enhanced error messages in JWT auth middleware for clarity
- Updated login API URL handling in frontend for environment support
- Added dev server script for easier local testing
- Updated .gitignore to exclude unnecessary files

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
   "build": "echo 'No build step for backend'",
-  "dev": "nodemon server.js",
+  "dev": "nodemon dev.js",
   "start": "node server.js"
 },
   "dependencies": {
